Agregar configuración de Stripe en .env.template y definir el servicio payments en docker-compose.yml

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,10 @@
 CLIENT_GATEWAY_PORT=3000
+
+#* Stripe API Keys
+#a* https://dashboard.stripe.com/test/dashboard
+STRIPE_SECRET=
+STRIPE_SUCCESS_URL=http://127.0.0.1:3000/payments/success
+STRIPE_CANCEL_URL=http://127.0.0.1:3000/payments/cancelled
+
+#a*https://dashboard.stripe.com/test/workbench/webhooks/we_1Rcf8q01APz2rKebtLbpDgY2
+STRIPE_ENDPOINT_SECRET=
