--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,35 @@
 version: "3.8"
 name: cursos-nestjs
 services:
+  # --------------------
+  # Infraestructura
+  # --------------------
+
+  # Servicio de mensajería NATS
   nats-server:
     image: nats:latest
     ports:
       - 8222:8222
 
+  # Base de datos para órdenes
+  orders-db:
+    container_name: orders-db
+    image: postgres:latest
+    restart: always
+    volumes:
+      - ./orders-ms/postgres:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: orders_db
+
+  # --------------------
+  # Microservicios
+  # --------------------
+
+  # API Gateway principal
   client-gateway:
     build: ./client-gateway
     ports:
@@ -19,6 +43,7 @@ services:
     depends_on:
       - nats-server
 
+  # Microservicio de productos
   products-service:
     build: ./products-ms
     volumes:
@@ -31,6 +56,7 @@ services:
     depends_on:
       - nats-server
 
+  # Microservicio de órdenes
   orders-service:
     build: ./orders-ms
     volumes:
@@ -45,6 +71,7 @@ services:
       - orders-db
       - nats-server
 
+  # Microservicio de pagos
   payments-service:
     build: ./payments-ms
     volumes:
@@ -59,16 +86,3 @@ services:
       - STRIPE_ENDPOINT_SECRET= ${STRIPE_ENDPOINT_SECRET}
     depends_on:
       - nats-server
-
-  orders-db:
-    container_name: orders-db
-    image: postgres:latest
-    restart: always
-    volumes:
-      - ./orders-ms/postgres:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: orders_db
