Simplificar el comando de inicio del microservicio de órdenes en docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,8 +61,7 @@ services:
     build: ./orders-ms
     volumes:
       - ./orders-ms/src:/usr/src/app/src
-    command:
-      ["/bin/sh", "-c", "./wait-for-it.sh orders-db 5432 -- npm run start:dev"]
+    command: ./wait-for-it.sh orders-db 5432 -- npm run start:dev
     environment:
       - PORT=3002
       - NATS_SERVERS=nats://nats-server:4222
