--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "payments-ms"]
 	path = payments-ms
 	url = https://github.com/NestJs-Curso/payments-ms.git
+[submodule "auth-ms"]
+	path = auth-ms
+	url = https://github.com/NestJs-Curso/auth-ms.git
