Agregar configuración del microservicio de autenticación en docker-compose y actualizar variables de entorno en .env.template

--- a/.env.template
+++ b/.env.template
@@ -12,3 +12,6 @@ STRIPE_ENDPOINT_SECRET=
 #*Hookdeck enviroments variables
 HOOCKED_SOURCE=
 HOOCKED_TOKEN=
+
+#* Auth-Service Enviroment Variables
+AUTH_DB_URL=mongodb+srv://<USER>:<Password>@auth-microservice-db.jzoubye.mongodb.net/AuthDB
