--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,6 +88,20 @@ services:
     ports:
       - ${PAYMENTS_MS_PORT}:${PAYMENTS_MS_PORT}
 
+  # Microservicio de Autentificacion
+  auth-service:
+    build: ./auth-ms
+    volumes:
+      - ./auth-ms/src:/usr/src/app/src
+    command: npm run start:dev
+    environment:
+      - PORT=3004
+      - NATS_SERVERS=nats://nats-server:4222
+      - DATABASE_URL=${AUTH_DB_URL}
+      - JWT_SECRET=${JWT_SECRET}
+    depends_on:
+      - nats-server
+
   # Servicio de Hookdeck para webhooks
   hookdeck:
     image: hookdeck/hookdeck-cli:latest
